--- a/capcha/Base.lproj/Main.storyboard
+++ b/capcha/Base.lproj/Main.storyboard
@@ -1,26 +1,136 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="capcha" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QFv-gf-6il">
+                                <rect key="frame" x="32" y="98" width="257" height="143"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Sa-b8-Ard">
+                                        <rect key="frame" x="17" y="22" width="223" height="98"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="50"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="7Sa-b8-Ard" firstAttribute="centerY" secondItem="QFv-gf-6il" secondAttribute="centerY" id="cSE-Qd-9uV"/>
+                                    <constraint firstItem="7Sa-b8-Ard" firstAttribute="leading" secondItem="QFv-gf-6il" secondAttribute="leading" constant="17" id="l5K-gt-fXq"/>
+                                    <constraint firstItem="7Sa-b8-Ard" firstAttribute="centerX" secondItem="QFv-gf-6il" secondAttribute="centerX" id="pTJ-Ci-ye8"/>
+                                    <constraint firstItem="7Sa-b8-Ard" firstAttribute="top" secondItem="QFv-gf-6il" secondAttribute="top" constant="22" id="yY7-bY-081"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1W-84-evW">
+                                <rect key="frame" x="16" y="394" width="142" height="62"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="142" id="NKn-X8-fj9"/>
+                                    <constraint firstAttribute="height" constant="62" id="RaN-Mr-BKo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="23"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p5O-jV-mmu">
+                                <rect key="frame" x="162" y="394" width="142" height="62"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="23"/>
+                                <color key="tintColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="submit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7E7-aD-SqP"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WxB-Zi-Ka4">
+                                <rect key="frame" x="32" y="46" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qM-VL-Ni0">
+                                <rect key="frame" x="85" y="46" width="11" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K6N-8o-9i8" customClass="ProgressBar" customModule="capcha" customModuleProvider="target">
+                                <rect key="frame" x="16" y="249" width="288" height="26"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Type here" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="HHy-gi-s3n">
+                                <rect key="frame" x="16" y="283" width="288" height="89"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="89" id="OTN-2k-V0c"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="K6N-8o-9i8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0At-bj-NKA"/>
+                            <constraint firstItem="K6N-8o-9i8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="249" id="2go-Ys-VJ1"/>
+                            <constraint firstItem="1qM-VL-Ni0" firstAttribute="baseline" secondItem="WxB-Zi-Ka4" secondAttribute="firstBaseline" id="3a1-Hv-03L"/>
+                            <constraint firstItem="HHy-gi-s3n" firstAttribute="leading" secondItem="e1W-84-evW" secondAttribute="leading" id="9zL-Ao-Oj5"/>
+                            <constraint firstItem="e1W-84-evW" firstAttribute="baseline" secondItem="p5O-jV-mmu" secondAttribute="firstBaseline" id="C0h-NN-hzt"/>
+                            <constraint firstItem="QFv-gf-6il" firstAttribute="top" secondItem="WxB-Zi-Ka4" secondAttribute="bottom" constant="31" id="Eug-f7-ZGl"/>
+                            <constraint firstItem="QFv-gf-6il" firstAttribute="centerX" secondItem="K6N-8o-9i8" secondAttribute="centerX" id="HPa-ma-pba"/>
+                            <constraint firstItem="1qM-VL-Ni0" firstAttribute="leading" secondItem="WxB-Zi-Ka4" secondAttribute="trailing" constant="8" symbolic="YES" id="HyS-83-9MU"/>
+                            <constraint firstItem="K6N-8o-9i8" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Iz0-a7-l8a"/>
+                            <constraint firstItem="HHy-gi-s3n" firstAttribute="top" secondItem="K6N-8o-9i8" secondAttribute="bottom" constant="8" symbolic="YES" id="LAY-sA-FHs"/>
+                            <constraint firstItem="K6N-8o-9i8" firstAttribute="trailing" secondItem="HHy-gi-s3n" secondAttribute="trailing" id="NFg-VW-yE2"/>
+                            <constraint firstItem="WxB-Zi-Ka4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="16" id="T6k-15-XPF"/>
+                            <constraint firstItem="HHy-gi-s3n" firstAttribute="trailing" secondItem="p5O-jV-mmu" secondAttribute="trailing" id="Vhl-r5-KYI"/>
+                            <constraint firstItem="p5O-jV-mmu" firstAttribute="baseline" secondItem="e1W-84-evW" secondAttribute="firstBaseline" id="Xl8-vQ-V3C"/>
+                            <constraint firstItem="e1W-84-evW" firstAttribute="top" secondItem="HHy-gi-s3n" secondAttribute="bottom" constant="22" id="YbU-L6-dmt"/>
+                            <constraint firstItem="WxB-Zi-Ka4" firstAttribute="leading" secondItem="QFv-gf-6il" secondAttribute="leading" id="Yj8-Bn-OBZ"/>
+                            <constraint firstItem="WxB-Zi-Ka4" firstAttribute="baseline" secondItem="1qM-VL-Ni0" secondAttribute="baseline" id="dCB-0W-wqV"/>
+                            <constraint firstItem="K6N-8o-9i8" firstAttribute="top" secondItem="QFv-gf-6il" secondAttribute="bottom" constant="8" symbolic="YES" id="eAY-Yf-Tvy"/>
+                            <constraint firstItem="e1W-84-evW" firstAttribute="top" secondItem="p5O-jV-mmu" secondAttribute="top" id="mPB-bY-YAo"/>
+                            <constraint firstItem="p5O-jV-mmu" firstAttribute="leading" secondItem="e1W-84-evW" secondAttribute="trailing" constant="4" id="mfI-3Q-AZL"/>
+                            <constraint firstItem="WxB-Zi-Ka4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="26" id="pPx-HO-aN0"/>
+                            <constraint firstItem="K6N-8o-9i8" firstAttribute="leading" secondItem="HHy-gi-s3n" secondAttribute="leading" id="uNW-9q-gBT"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="e1W-84-evW" secondAttribute="bottom" constant="112" id="xda-us-NaQ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="box" destination="QFv-gf-6il" id="xtu-iN-Rko"/>
+                        <outlet property="capchaLabel" destination="7Sa-b8-Ard" id="KQR-m0-jpK"/>
+                        <outlet property="inputField" destination="HHy-gi-s3n" id="jWf-X8-wt4"/>
+                        <outlet property="progressBar" destination="K6N-8o-9i8" id="jfn-id-JWr"/>
+                        <outlet property="scoreLabel" destination="1qM-VL-Ni0" id="BHg-tY-SxE"/>
+                        <outlet property="startButton" destination="e1W-84-evW" id="wb4-TZ-PGL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="135" y="138.38028169014083"/>
         </scene>
     </scenes>
 </document>
